# travelplay

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
docs/: flowchart.md
src/travelplay/: app.py  config.py  llm_client.py  prompts.py  schema.py
src/travelplay/pdf/: pdf_stub.py
src/travelplay/pdf/tests/: test_schema.py
